tests/snapshots/it_api__get_posts_read_later.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": [
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745074",
        "date": "2019-12-09T18:35:49Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 3,
        "is_read": false,
        "is_read_later": true,
        "link": "https://www.newyorker.com/magazine/2019/12/16/how-william-gibson-keeps-his-science-fiction-real",
        "media_link": null,
        "summary": "Comments",
        "title": "How William Gibson Keeps His Science Fiction Real"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21734605",
        "date": "2019-12-08T06:21:34Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 2,
        "is_read": false,
        "is_read_later": true,
        "link": "https://www.tmakiguchi.org/geographer/asgeographer/geographyhuman.html",
        "media_link": null,
        "summary": "Comments",
        "title": "Tsunebaro Makaguchi – Education Through Interest"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21739519",
        "date": "2019-12-09T00:29:03Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 1,
        "is_read": false,
        "is_read_later": true,
        "link": "http://jpkoning.blogspot.com/2019/12/a-way-to-make-anonymous-online-donations.html",
        "media_link": null,
        "summary": "Comments",
        "title": "A way to make anonymous online donations"
      }
    ],
    "status": "ok"
  }
]
