tests/snapshots/it_api__get_posts_unread_count.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": {
      "all": 164,
      "categories": {
        "1": 84,
        "2": 80
      },
      "feeds": {
        "1": 30,
        "2": 4,
        "3": 50,
        "4": 20,
        "5": 10,
        "6": 10,
        "7": 10,
        "8": 20,
        "9": 10
      }
    },
    "status": "ok"
  }
]
