tests/snapshots/it_api__posts_all_mark_as_read.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": {
      "all": 0,
      "categories": {},
      "feeds": {}
    },
    "status": "ok"
  }
]
