tests/snapshots/it_api__posts_all_mark_as_read_last_10.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": {
      "all": 154,
      "categories": {
        "1": 74,
        "2": 80
      },
      "feeds": {
        "1": 20,
        "2": 4,
        "3": 50,
        "4": 20,
        "5": 10,
        "6": 10,
        "7": 10,
        "8": 20,
        "9": 10
      }
    },
    "status": "ok"
  }
]
